<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <Button
            android:text="@string/review_image"
            android:layout_width="@dimen/_400px"
            android:layout_height="wrap_content"
            android:id="@+id/review_btn"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            app:layout_constraintHorizontal_bias="0.495"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/send_image_btn"/>

    <Button
            android:text="@string/send_image"
            android:layout_width="@dimen/_400px"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:id="@+id/send_image_btn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"/>


    <ImageView
            android:layout_width="@dimen/_350px"
            android:layout_height="@dimen/_350px"
            android:src="@mipmap/ic_medilot"
            android:id="@+id/logo"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="20dp"
            app:layout_constraintHorizontal_bias="0.489"
            android:contentDescription="@string/app_name"/>

</android.support.constraint.ConstraintLayout>