<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:orientation="vertical"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:id="@+id/login_container">

    <include
            android:id="@+id/custom_toolbar_id"
            layout="@layout/custom_bar"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            />

    <EditText
            android:layout_width="@dimen/_400px"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/username"
            android:ems="10"
            android:id="@+id/id_username"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/custom_toolbar_id"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:layout_width="@dimen/_400px"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:id="@+id/id_password"
            android:layout_marginTop="41dp"
            app:layout_constraintTop_toBottomOf="@+id/id_username"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>

    <Button
            android:text="@string/login"
            android:layout_width="@dimen/_400px"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/id_password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

</android.support.constraint.ConstraintLayout>