<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <ImageView
            android:layout_width="@dimen/_300px"
            android:layout_height="@dimen/_300px"
            tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/uploaded_image_view"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"/>

    <EditText
            android:background="@drawable/edit_text_border"
            android:layout_width="@dimen/_400px"
            android:layout_height="@dimen/_300px"
            android:padding="@dimen/_10px"
            android:hint="@string/give_comment"
            android:inputType="textMultiLine"
            android:ems="10"
            android:gravity="top"
            android:id="@+id/comment_edit_text"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/uploaded_image_view"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:text="@string/approve"
            android:layout_width="@dimen/_200px"
            android:padding="@dimen/_10px"
            android:layout_height="@dimen/_80px"
            android:id="@+id/approve_btn"
            android:layout_marginTop="36dp"
            android:textColor="@android:color/white"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/comment_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="50dp"/>

    <Button
            android:text="@string/reject"
            android:padding="@dimen/_10px"
            android:layout_width="@dimen/_200px"
            android:layout_height="@dimen/_80px"
            android:id="@+id/reject_btn"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"
            app:layout_constraintStart_toEndOf="@+id/approve_btn"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.394"
            app:layout_constraintTop_toTopOf="@+id/approve_btn"/>
</android.support.constraint.ConstraintLayout>