<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <include
            android:id="@+id/custom_toolbar_id"
            layout="@layout/custom_bar"
            android:layout_width="match_parent"
            android:layout_height="53dp"/>

    <ImageView
            android:layout_width="@dimen/_400px"
            android:layout_height="@dimen/_400px"
            tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/image_review"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/custom_toolbar_id"/>

    <Button
            android:text="@string/send_for_Approval"
            android:layout_width="@dimen/_400px"
            android:layout_height="wrap_content"
            android:id="@+id/send_btn"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            app:layout_constraintHorizontal_bias="0.495"
            android:background="@color/colorPrimary"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/review_gallery_btn"/>

    <Button
            android:text="@string/upload_image"
            android:layout_width="@dimen/_400px"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:id="@+id/review_gallery_btn"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintHorizontal_bias="0.495"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/capture_btn"/>

    <Button
            android:text="@string/take_new_image"
            android:layout_width="@dimen/_400px"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:id="@+id/capture_btn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintHorizontal_bias="0.504"
            android:layout_marginBottom="50dp"
            android:background="@color/color_orange"
            app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>