<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">


    <Button
            android:text="@string/give_review"
            android:layout_width="@dimen/_400px"
            android:layout_height="wrap_content"
            android:id="@+id/give_review_btn"
            android:textColor="@android:color/white"
            android:background="@color/color_orange"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"/>

    <ImageView
            android:layout_width="@dimen/_300px"
            android:layout_height="@dimen/_300px"
            tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/uploaded_image"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"/>

    <android.support.v7.widget.CardView
            android:id="@+id/card_one"
            android:layout_width="@dimen/_400px"
            android:layout_height="@dimen/_200px"
            app:layout_constraintTop_toBottomOf="@+id/uploaded_image"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:layout_margin="@dimen/_10px"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:text="@string/no_review_yet"
                    android:id="@+id/comment"
                    android:textSize="@dimen/_25pt"/>
            <TextView
                    android:layout_below="@id/comment"
                    android:layout_marginRight="@dimen/_10px"
                    android:layout_marginTop="@dimen/_10px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/reviewer"
                    android:textStyle="italic"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/_18pt"/>
            <TextView
                    android:layout_marginRight="@dimen/_10px"
                    android:layout_marginTop="@dimen/_5px"
                    android:layout_below="@id/reviewer"
                    android:layout_width="wrap_content"
                    android:layout_height="66dp"
                    android:id="@+id/timestamp"
                    android:textStyle="italic"
                    android:textSize="@dimen/_18pt"
                    android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:id="@+id/card_two"
            android:layout_width="@dimen/_400px"
            android:layout_height="@dimen/_200px"
            app:layout_constraintTop_toBottomOf="@+id/card_one"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:layout_margin="@dimen/_10px"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:text="@string/no_review_yet"
                    android:id="@+id/comment_two"
                    android:textSize="@dimen/_25pt"/>
            <TextView
                    android:layout_below="@id/comment_two"
                    android:layout_marginRight="@dimen/_10px"
                    android:layout_marginTop="@dimen/_10px"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/reviewer_two"
                    android:textStyle="italic"
                    android:layout_alignParentRight="true"
                    android:textSize="@dimen/_18pt"/>
            <TextView
                    android:layout_marginRight="@dimen/_10px"
                    android:layout_marginTop="@dimen/_5px"
                    android:layout_below="@id/reviewer_two"
                    android:layout_width="wrap_content"
                    android:layout_height="66dp"
                    android:id="@+id/timestamp_two"
                    android:textStyle="italic"
                    android:textSize="@dimen/_18pt"
                    android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:padding="@dimen/_10px"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/rejected"
            android:layout_width="@dimen/_400px"
            android:layout_height="wrap_content"
            android:id="@+id/banner_status"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/card_two"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"/>
</android.support.constraint.ConstraintLayout>